# Horacio-Proj

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  Doxyfile  LICENSE  README.md  build-xcode.sh  main.c  main.cpp
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  Core.h  fsm.h
src/core/: Action.h  Actor.cpp  Actor.h  Area.cpp  Area.h  CMakeLists.txt  Camera.cpp  Camera.h  Filesystem.cpp  Filesystem.h  JobManager.cpp  JobManager.h  Layer.cpp  Layer.h  Log.cpp  Log.h  LogManager.cpp  LogManager.h  Map.cpp  Map.h  Movable.cpp  Movable.h  MoveAction.cpp  MoveAction.h  RepeatAction.cpp  RepeatAction.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  SceneNode.cpp  SceneNode.h  SequenceAction.cpp  SequenceAction.h  Singleton.h  Visitor.h  WorkerQueue.cpp  WorkerQueue.h  World.cpp  World.h  (+1 more)
src/map/: CMakeLists.txt  Parser.cpp  Parser.h  rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
src/rules/: AlphaMemory.cpp  AlphaMemory.h  AlphaMemoryNode.cpp  AlphaMemoryNode.h  AlphaNode.cpp  AlphaNode.h  BetaMemory.cpp  BetaMemory.h  BetaMemoryNode.cpp  BetaMemoryNode.h  BetaNode.cpp  BetaNode.h  CMakeLists.txt  Condition.cpp  Condition.h  DummyNode.cpp  DummyNode.h  Fact.cpp  Fact.h  JoinNode.cpp  JoinNode.h  MemoryElement.h  Node.h  ObjectSink.h  ProductionNode.cpp  ProductionNode.h  Rete.cpp  Rete.h  ReteNet.cpp  ReteNet.h  ReteNode.cpp  ReteNode.h  RetePrinter.cpp  ReteVisitor.h  RootNode.h  SelectionNode.cpp  StringManip.h  Template.h  TestNode.cpp  TestNode.h  (+12 more)
src/ui/: CMakeLists.txt  Camera.cpp  Camera.h  Filesystem.cpp  Filesystem.h  GuiActor.cpp  GuiActor.h  GuiMap.cpp  GuiMap.h  JobManager.cpp  JobManager.h  Layer.cpp  Layer.h  Loader.cpp  Loader.h  MapCoordinatesAdapter.h  MapManager.cpp  MapManager.h  MapRenderer.cpp  MapRenderer.h  Mesh.h  MeshManager.cpp  MeshManager.h  Movable.cpp  Movable.h  NodeCoordinateAdapterVisitor.cpp  NodeCoordinateAdapterVisitor.h  NodeRendererVisitor.cpp  NodeRendererVisitor.h  NodeVisitor.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  RegularPolygon.cpp  RegularPolygon.h  Renderable.h  Renderer.cpp  Renderer.h  SceneNode.cpp  (+35 more)
src/ui/debug/: Square.cpp  Square.h
src/ui/imgui/: ImguiWindow.cpp  ImguiWindow.h  Window.cpp  Window.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  window.cpp  window.h
src/ui/nuklear/: nuklearGlobal.h  nuklear_sdl_gl3.h
